# PSOC_Edge_Zephyr_Sample_App

autanalog/lp_cpu_temp_pdl/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
autanalog/lp_cpu_temp_pdl/src/: cycfg_peripherals.c  cycfg_peripherals.h  main.c
mbox/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
mbox/boards/: kit_pse84_eval_common.overlay
mbox/src/: main.c
